--- a/company.html
+++ b/company.html
@@ -769,7 +769,27 @@
                                 <div class="avatar">K</div>
                                 <h4>Khas-Ochir Bayarjargal</h4>
                                 <div class="role">Founder</div>
-                                <p style="color: #374151 !important;">Mathematician with 5 years of experience teaching mathematics. Passionate about making quality math education accessible to all students.</p>
+                                <p style="color: #374151 !important;">Mathematician with 5+ years of teaching experience. Passionate about mathematical discovery and leading engaging problem‑solving discussions.</p>
+                                <p style="color: #374151 !important; margin-top: 0.75em;">
+                                    International competitions: 2 gold, 1 bronze. National Math Olympiad: 1 silver, 1 bronze.
+                                </p>
+                            </div>
+
+                            <div class="team-member">
+                                <div class="avatar">B</div>
+                                <h4>Bilegjargal Altangerel</h4>
+                                <div class="role">Co‑Founder • Physics & Mathematics Specialist</div>
+                                <p style="color: #374151 !important;">Physics and mathematics specialist with 6+ years of teaching experience, dedicated to making science clear, practical, and inspiring for every learner.</p>
+                                <p style="color: #374151 !important; margin-top: 0.75em;">
+                                    Achievements: National Math Olympiad — silver, bronze; National Physics Olympiad — 2× bronze.
+                                </p>
+                            </div>
+
+                            <div class="team-member">
+                                <div class="avatar">C</div>
+                                <h4>Chinguun Ganbaatar</h4>
+                                <div class="role">Co‑Founder • Computer Science & Mathematics Tutor</div>
+                                <p style="color: #374151 !important;">Computer science and mathematics tutor with a portfolio of hands‑on projects. Avid reader who helps students build strong STEM foundations through practical, project‑based learning.</p>
                             </div>
                         </div>
                     </div>
