--- a/company.html
+++ b/company.html
@@ -691,6 +691,15 @@
                 </div>
 
                 
+                
+                <!-- Contact CTA Only -->
+                <section class="contact-section" id="contact">
+                    <div class="edu-container">
+                        <div class="text-center mt-6">
+                            <a href="contact.html" class="cta-button" style="display: inline-block; background: #1e40af; color: white !important; padding: 1.2em 2.5em; border-radius: 50px; text-decoration: none; font-weight: 600; transition: all 0.3s ease; text-align: center; font-size: 1.1em;">Contact Us</a>
+                        </div>
+                    </div>
+                </section>
 
                 <!-- Team Section -->
                 <section class="team-section" id="team">
