--- a/company.html
+++ b/company.html
@@ -722,7 +722,7 @@
                             </div>
 
                             <div class="team-member">
-                                <div class="avatar">C</div>
+                                <img src="images/chinguun.png" alt="Chinguun Ganbaatar" class="avatar" style="object-fit: cover;">
                                 <h4>Chinguun Ganbaatar</h4>
                                 <div class="role">Co‑Founder • Computer Science & Mathematics Tutor</div>
                                 <p style="color: #374151 !important;">Computer science and mathematics tutor with a portfolio of hands‑on projects. Avid reader who helps students build strong STEM foundations through practical, project‑based learning.</p>
