--- a/company.html
+++ b/company.html
@@ -712,7 +712,7 @@
                             </div>
 
                             <div class="team-member">
-                                <div class="avatar">B</div>
+                                <img src="images/billy.png" alt="Bilegjargal Altangerel" class="avatar" style="object-fit: cover;">
                                 <h4>Bilegjargal Altangerel</h4>
                                 <div class="role">Co‑Founder • Physics & Mathematics Specialist</div>
                                 <p style="color: #374151 !important;">Physics and mathematics specialist with 6+ years of teaching experience, dedicated to making science clear, practical, and inspiring for every learner.</p>
