--- a/math-courses.html
+++ b/math-courses.html
@@ -62,6 +62,15 @@
         body.courses-page .course-desc { color: #475569 !important; }
         body.courses-page .topic-list li { color: #374151 !important; }
 
+        /* Alignment: hero centered; content left */
+        body.courses-page .courses-hero h1,
+        body.courses-page .courses-hero p { text-align: center !important; }
+        body.courses-page #main { text-align: left !important; }
+        body.courses-page #main p,
+        body.courses-page #main li,
+        body.courses-page #main .course-card *,
+        body.courses-page #main .section-header h2 { text-align: left !important; }
+
         @media (max-width: 768px) {
             .courses-hero h1 { font-size: 2.2em; }
         }
