--- a/math-courses.html
+++ b/math-courses.html
@@ -47,9 +47,10 @@
         .pill { background: #f1f5f9; color: #0f172a; border: 1px solid #e2e8f0; border-radius: 999px; padding: 0.25em 0.7em; font-size: 0.85em; font-weight: 600; }
         .course-desc { color: #475569; margin-bottom: 0.8em; }
         .topic-list { list-style: none; padding: 0; margin: 0; }
-        .topic-list li { padding: 0.35em 0 0.35em 1.2em; border-bottom: 1px solid #eef2f7; color: #374151; position: relative; }
+        /* Inline checkmark next to text (no overlap) */
+        .topic-list li { display: flex; align-items: flex-start; gap: 0.6em; padding: 0.5em 0; border-bottom: 1px solid #eef2f7; color: #374151; line-height: 1.55; }
         .topic-list li:last-child { border-bottom: none; }
-        .topic-list li::before { content: "✓"; position: absolute; left: 0; color: #0891b2; font-weight: 700; }
+        .topic-list li::before { content: "✓"; color: #0891b2 !important; font-weight: 700; flex: 0 0 auto; line-height: 1.2; transform: translateY(0.1em); }
 
         /* Page/content backgrounds and readable text outside hero */
         body.courses-page { background: #ffffff !important; }
