--- a/tutoring.html
+++ b/tutoring.html
@@ -21,18 +21,26 @@
         .tutoring-hero .edu-container { position:relative; z-index:1; display:flex; flex-direction:column; align-items:center; justify-content:center; }
         .tutoring-hero h1 { color:#fff !important; font-size:clamp(2rem,5vw,3rem); margin:0 0 .5rem 0; }
         .tutoring-hero p { color:#e5e7eb !important; max-width:800px; margin:0 auto; }
-        .tutoring-info {
-            margin-bottom: 2em;
-        }
+        .tutoring-info { margin-bottom: 2em; }
         .tutoring-benefits {
             display: flex;
             flex-wrap: wrap;
             gap: 1.5em;
             margin-bottom: 2em;
         }
-        .benefit-item { flex:1 1 300px; background:#fff; padding:1.5em; border-radius:12px; border:1px solid #e5e7eb; box-shadow:0 10px 25px rgba(0,0,0,0.06); }
-        .benefit-item h4 { color:#1e40af; margin-bottom:0.7em; }
+        .benefit-item { flex:1 1 300px; background:#fff; padding:1.25em 1.25em 1.25em 1em; border-radius:12px; border:1px solid #e5e7eb; box-shadow:0 10px 25px rgba(0,0,0,0.06); display:flex; gap:0.9em; align-items:flex-start; }
+        .benefit-icon { width:38px; height:38px; border-radius:10px; background:#eef2ff; display:flex; align-items:center; justify-content:center; color:#1e40af; flex:0 0 38px; }
+        .benefit-item h4 { color:#1e40af; margin:0 0 0.25em 0; }
+        .benefit-item p { margin:0; color:#374151; }
         .calendly-container { background:#fff; border-radius:12px; padding:2em; box-shadow:0 10px 25px rgba(0,0,0,0.06); border:1px solid #e5e7eb; }
+
+        /* Steps list */
+        ol.steps { list-style: none; padding:0; margin:0 0 1.5em 0; counter-reset: step; }
+        ol.steps li { counter-increment: step; background:#fff; border:1px solid #e5e7eb; border-radius:10px; padding:0.8em 1em; margin:0.6em 0; display:flex; gap:0.8em; align-items:flex-start; box-shadow:0 4px 12px rgba(0,0,0,.04); }
+        ol.steps li::before { content: counter(step); width:28px; height:28px; border-radius:50%; background:#1e40af; color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700; }
+
+        /* Content area contrast */
+        #main { background:#ffffff !important; }
     </style>
 </head>
 <body class="is-preload">
@@ -194,21 +202,30 @@
 
                 <div class="tutoring-benefits">
                     <div class="benefit-item">
-                        <h4>Personalized Attention</h4>
-                        <p>Get direct feedback and guidance tailored to your specific needs and learning style.</p>
+                        <div class="benefit-icon"><i class="fas fa-user-check"></i></div>
+                        <div>
+                            <h4>Personalized Attention</h4>
+                            <p>Get direct feedback and guidance tailored to your specific needs and learning style.</p>
+                        </div>
                     </div>
                     <div class="benefit-item">
-                        <h4>Targeted Help</h4>
-                        <p>Focus on the exact topics and concepts where you need the most assistance.</p>
+                        <div class="benefit-icon"><i class="fas fa-bullseye"></i></div>
+                        <div>
+                            <h4>Targeted Help</h4>
+                            <p>Focus on the exact topics and concepts where you need the most assistance.</p>
+                        </div>
                     </div>
                     <div class="benefit-item">
-                        <h4>Flexible Scheduling</h4>
-                        <p>Book sessions at times that work best for your schedule.</p>
+                        <div class="benefit-icon"><i class="fas fa-calendar-alt"></i></div>
+                        <div>
+                            <h4>Flexible Scheduling</h4>
+                            <p>Book sessions at times that work best for your schedule.</p>
+                        </div>
                     </div>
                 </div>
 
                 <h3>How It Works</h3>
-                <ol>
+                <ol class="steps">
                     <li>Schedule a 30-minute session using the calendar below</li>
                     <li>Share your specific questions or topics in advance</li>
                     <li>Meet online with your tutor at the scheduled time</li>
